--- a/src/blockquote/blockquote.scss
+++ b/src/blockquote/blockquote.scss
@@ -1,5 +1,5 @@
 blockquote {
-  border-left: 0.3rem solid var(--color-secondary);
+  border-left: 0.3rem solid var(--blockquote-border-color);
   margin-left: 0;
   margin-right: 0;
   padding: 1rem 1.5rem;
