--- a/src/dialog/dialog.scss
+++ b/src/dialog/dialog.scss
@@ -1,5 +1,5 @@
 dialog {
-  border: 1px solid var(--bg-dark-color);
+  border: 1px solid var(--bg-primary-color);
   border-radius: 1rem;
   box-shadow: 2px 2px 10px var(--color-light);
   position: fixed;
