--- a/src/article/article.scss
+++ b/src/article/article.scss
@@ -1,5 +1,5 @@
 article {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 15px var(--article-box-shadow-color);
 }
 
 article header {
@@ -12,7 +12,7 @@ article p {
 
 article footer {
   padding: 2rem 1.6rem 2rem;
-  border-top: 1px solid var(--bg-grey-color);
+  border-top: 1px solid var(--color-dark);
 }
 
 article img {
