--- a/src/nav/nav.scss
+++ b/src/nav/nav.scss
@@ -6,13 +6,6 @@ nav {
   z-index: 2;
 }
 
-nav.is-sticky {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
 nav,
 nav section {
   display: flex;
@@ -61,17 +54,18 @@ nav ul li:hover ul {
 }
 
 nav ul li ul {
-  // border: 0.1rem solid var(--border-color);
+  background-color: var(--background-color);
+  border: 1px solid var(--color-primary);
   border-radius: 0.5rem;
-  // box-shadow: var(--color-light) var(--color-gray);
   display: none;
+  min-width: 10rem;
   height: auto;
-  left: -6rem;
-  padding: 0;
+  padding: 0.5rem 1rem;
   position: absolute;
-  top: 3rem;
+  right: 0rem;
+  top: 3.6rem;
+  translate: 50%;
   white-space: nowrap;
-  width: auto;
   z-index: 3;
 }
 
