--- a/src/utils/utils.scss
+++ b/src/utils/utils.scss
@@ -12,3 +12,18 @@
 .float-right {
   float: right;
 }
+
+.is-sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+table.striped tr:nth-of-type(2n) {
+  background-color: var(--color-light);
+}
+
+body.dark table.striped tr:nth-of-type(2n) {
+  background-color: var(--color-dark);
+}
